@@ -6,12 +6,12 @@ What is the CTS2 Development Framework?
 ----------------
 The CTS2 Development Framework is a toolkit for rapidly creating CTS2 implementations.
 
-Visit our [website][Website] or get support on our [forums][Forums].  
-Track and submit issues and bugs on our [issue tracker][Issues].
+Visit the [website][Website] for more information.  
+Track and submit issues and bugs on the [issue tracker][Issues].
 
 Source
 ------
-The latest and greatest source can be found on [GitHub].  
+The source code can be found on [GitHub].  
 
 Compiling
 ---------
@@ -19,6 +19,11 @@ CTS2 Development Framework uses Maven to handle its dependencies.
 
 * Install Maven 3 (http://maven.apache.org/download.html)  
 * Checkout this repo and run: `mvn clean install`
+* NOTE: It may be necessary to configure ```MAVEN_OPTS``` to allow Maven more memory for the compilation. For example: ```MAVEN_OPTS="-Xmx500m -XX:MaxPermSize=256m"```
+
+Contributing
+------------
+Contributions are welcome. To contribute, fork this repository, create an issue on the on the [issue tracker][Issues], and send a pull request.
 
 [Project Logo]: http://informatics.mayo.edu/cts2/framework/wp-content/uploads/2011/10/logo4-small4.png
 [License]: http://www.apache.org/licenses/LICENSE-2.0
